Prevent horizontal scrolling.
Use padding and box-sizing to prevent search box from adding white space to the right.

--- a/stylesheets/scss/_layout.scss
+++ b/stylesheets/scss/_layout.scss
@@ -95,7 +95,8 @@ html {
             display: none;
           }
           form input[type='text']{
-            margin-left: 120px;
+            box-sizing: border-box;
+            padding-left: 120px;
             height: 72px;
           }
           .icon-search {
